# optparse

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: release.yml  test.yml
cmake/: optparseConfig.cmake.in
examples/: CMakeLists.txt  long.c  short.c  subcommands.c  usage.c
include/optparse/: optparse.h
test/: CMakeLists.txt  main.cpp  optparse_test.cpp
test/cases/: basic_test.cpp  help_test.cpp  stress_test.cpp
