file(GLOB SRC_G "cases/*.cpp")
add_executable(optparse_test ${SRC_G} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
target_include_directories(optparse_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/catch)
target_link_libraries(optparse_test PUBLIC optparse::optparse)
add_test(NAME AllTests COMMAND optparse_test)
if(MSVC)
  target_compile_options(optparse_test PRIVATE /utf-8)
  target_compile_definitions(optparse_test PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()
